# data-science-template

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  TODO.md  activate_env.sh  bentofile.yaml  cookiecutter.json  data.dvc  dvc.yaml  local_extensions.py  metrics.csv  model.dvc  processors.dvc  pyproject.toml  tox.ini
.dvc/: config
.github/: pull_request_template.md
.github/workflows/: run_test.yaml
.recipes/: GithubCreation.md  MetaflowAWS.md
config/: load_data.yaml  main.yaml  process.yaml  segment.yaml
config/data_catalog/: data_catalog.yaml
config/process/: process.yaml  process_1.yaml  process_2.yaml  process_3.yaml  process_4.yaml
config/segment/: AffinityPropagation.yaml  AgglomerativeClustering.yaml  Birch.yaml  DBSCAN.yaml  KMeans.yaml  MeanShift.yaml  OPTICS.yaml  SpectralClustering.yaml  segment.yaml  segment_1.yaml  segment_2.yaml  segment_3.yaml
data/: .gitignore  raw.dvc
hooks/: post_gen_project.py  pre_gen_project.py  pre_prompt.py
model/: cluster.pkl
notebook/: analyze_data.ipynb
notebooks/: analyze_results.ipynb
src/: bentoml_app.py  helper.py  main.py  predict.py  predict_app.py  process.py  process_data.py  segment.py  streamlit_app.py
tests/: test_process.py  test_process_data.py  test_train_model.py
{{cookiecutter.__directory_name}}/: .gitignore  .pre-commit-config.yaml  .python-version  Makefile  README.md  dvc.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  {{ cookiecutter.__dep_filename }}
{{cookiecutter.__directory_name}}/.dvc/: .gitignore
{{cookiecutter.__directory_name}}/config/: main.yaml
{{cookiecutter.__directory_name}}/config/process/: process1.yaml  process2.yaml
{{cookiecutter.__directory_name}}/data/: raw.dvc
{{cookiecutter.__directory_name}}/src/: __init__.py  process.py  train_model.py
{{cookiecutter.__directory_name}}/src/{{cookiecutter.__directory_name}}/: process.py
{{cookiecutter.__directory_name}}/tests/: test_process.py
{{cookiecutter.directory_name}}/: .gitignore  .pre-commit-config.yaml  AUTHORS.md  LICENSE.txt  Makefile  Pipfile  README.md  dvc.yaml  pyproject.toml  requirements.txt  {{ cookiecutter.__dep_filename }}
{{cookiecutter.directory_name}}/.github/workflows/: run_test.yaml
{{cookiecutter.directory_name}}/config/: main.yaml  print_hydra.py  sagemaker_lifecycle.sh
{{cookiecutter.directory_name}}/config/model/: model1.yaml  model2.yaml
{{cookiecutter.directory_name}}/data/: .gitignore
{{cookiecutter.directory_name}}/data/raw/: sample.csv
{{cookiecutter.directory_name}}/notebooks/: .gitignore
{{cookiecutter.directory_name}}/src/: __init__.py  config.py  main.py  process.py  run_notebook.py  train_model.py
{{cookiecutter.directory_name}}/tests/: __init__.py  test_train_model.py
