[tool.poetry]
name = "ds"
version = "0.1.0"
description = ""
authors = ["eyadsibai"]

[tool.poetry.dependencies]
python = "^3.10"
pdoc3 = "^0.10.0"
prefect = "^2.7.6"
polars = {extras = ["all"], version = "^0.16.16"}
scikit-learn = "^1.2.2"
pandas = "^1.5.3"
prefect-jupyter = "^0.2.0"
interrogate = "^1.5.0"
joblib = "^1.2.0"
lightgbm = "^3.3.5"
xgboost = "^1.7.4"
pyarrow = "^11.0.0"
fastparquet = "^2023.2.0"


[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.19.0"
seaborn = "^0.12.2"
jupyter = "^1.0.0"
black = "^23.1.0"
ruff = "^0.0.259"
# ipykernel
# jupytext
# awscli

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
)/
'''
