{%- if cookiecutter.dependency_manager == "poetry" %}
[tool.poetry]
name = "{{ cookiecutter.__directory_name }}"
version = "0.1.0"
description = ""
authors = ["{{ cookiecutter.author_name }}"]

[tool.poetry.dependencies]
python = "{{ cookiecutter.compatible_python_versions }}"
hydra-core = "^1.3.2"

[tool.poetry.group.dev.dependencies]
pdoc3 = "^0.11.6"
pytest = "^8.3.5"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
{% elif cookiecutter.dependency_manager == "uv" %}
[project]
name = "{{ cookiecutter.__directory_name }}"
version = "0.1.0"
description = ""
authors = [
    { name = "{{ cookiecutter.author_name }}" }
]
requires-python = "{{ cookiecutter.compatible_python_versions }}"
dependencies = [
    "hydra-core>=1.3.2"
]

[project.optional-dependencies]
dev = [
    "pdoc3>=0.11.6",
    "pytest>=8.3.5",
    "pre-commit>=4.2.0"
]
{% else %}
[project]
name = "{{ cookiecutter.__directory_name }}"
version = "0.1.0"
description = ""
authors = [
    { name = "{{ cookiecutter.author_name }}" }
]
dependencies = [
    "hydra-core>=1.3.2"
]

[project.optional-dependencies]
dev = [
    "pdoc3>=0.11.6",
    "pytest>=8.3.5",
    "pre-commit>=4.2.0"
]
{% endif %}

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

[tool.ruff.lint]
ignore = ["E501"]
select = ["B","C","E","F","W","B9", "I", "Q"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
ignore_missing_imports = true